--- a/style.css
+++ b/style.css
@@ -7,20 +7,29 @@
 }
 
 :root{
-    --cursorSize:0px
+    --cursorSize:0px;
+    --cursorOpacity:0;
 }
 
 body{
     min-height: 100dvh;
     background-color: rgb(15, 15, 15);
+    overflow: hidden;
 }
 
 h1{
     letter-spacing: -2%;
-    font-size: 64px;
+    font-size: 128px;
     margin: 1vh 0;
 }
 
+p{
+    line-height: 25px;
+}
+.cursor-title{
+    line-height: 35px;
+    font-size: 18px;
+}
 
 .container{
     display: flex;
@@ -46,7 +55,6 @@ h1{
     object-fit: cover;
     object-position: 50% center;
     border-radius: 2px;
-    cursor: none;
 }
 
 
@@ -56,10 +64,15 @@ h1{
     justify-content: center;
     align-items: center;
     width: var(--cursorSize);
-    height: var(--cursorSize);
-    border-radius: 50%;
-    background-color: black;
-    opacity: 1;
+    border-radius: 10px;
+    padding: 6px 10px;
+    border: 1px solid black;
+    background-color: rgb(43, 42, 42);
+    opacity: var(--cursorOpacity);
     z-index: 10000;
     pointer-events: none;
+}
+
+#cursor-content-text{
+    display: none;
 }
